Updated all the costers and fixed the alignment and position issues.

--- a/source/assets/stylesheets/_track.scss
+++ b/source/assets/stylesheets/_track.scss
@@ -317,8 +317,7 @@
     width: 95%;
 
     @include tablet {
-      right: 20px;
-      max-width: 42%;
+      right: 15px;
       width: auto;
     }
 
@@ -326,6 +325,7 @@
       box-shadow: none;
       width: 150px;
       margin: 0 auto;
+      max-width: none;
 
       @include tablet {
         margin: 0;
